update news for task dicoding

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
-    <string name="app_name">MyPortofolioNews</string>
-    <string name="news_title">Mandiri News</string>
+    <string name="app_name">My Portofolio News</string>
+        <string name="news_title">Squad News</string>
     <string name="lates_news">Berita Terkini</string>
     <string name="source_news">Sumber Berita</string>
     <string name="date_news">Tanggal Berita</string>
     <string name="all_news">Semua Berita</string>
+    <string name="about">About</string>
+    <string name="MyName">Epantika Pratama</string>
+    <string name="MyEmail">epanibs99@gmail.com</string>
 </resources>
